--- a/app/application/blueprints/site/views/profile.html
+++ b/app/application/blueprints/site/views/profile.html
@@ -1,37 +1,32 @@
 {% include 'header.html' %}
 
-<div class="container">
-        <div class="text mt-4  ">
-            <h1 >Administrează contul</h1>
-        </div>
-        <div class="text mt-4  ">
-            <h1 >Administrează contul</h1>
-        </div>
-
-        <div class="text mt-4  ">
-            <h1 >Administrează contul</h1>
-        </div>
-        <div class="text mt-4  ">
-            <h1 >Administrează contul</h1>
-        </div>
-        <div class="text mt-4  ">
-            <h1 >Administrează contul</h1>
-        </div>
-        <div class="text mt-4  ">
-            <h1 >Administrează contul</h1>
-        </div>
-        <div class="text mt-4  ">
-            <h1 >Administrează contul</h1>
-        </div>
-
-        <div class="text mt-4  ">
-            <h1 >Administrează contul</h1>
-        </div>
-        <hr/>
-    <div>
-    <div class="row">
+<div class="container mt-4">
+  <h3>Administrare profil</h3>
+  <p>Această secțiune vă permite să vizualizați și să modificați anumite date personale.</p>
+  <div class="row mt-5">
+    <div class="col-lg-3">
+      <div class="d-flex justify-content-center">
+        <ul class="nav nav-pills flex-column">
+          <li class="nav-item">
+            <a class="nav-link active" href="/profile">Informatii personale</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/profile/change-password">Schimbă parolă</a>
+          </li>
+        </ul>
+      </div>
     </div>
-</div>
+    <div class="col-lg-9">
+      <div class="tab-content">
+        <div class="tab-pane fade show active">
+          {% include "profile-tabs/personal-info-tab.html" %}
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 {% include 'footer.html' %}
+
+<script src="/static/js/utils.js"></script>
+<script src="/static/js/manage-users.js"></script>
