--- a/app/application/blueprints/site/views/profile-tabs/change-password-tab.html
+++ b/app/application/blueprints/site/views/profile-tabs/change-password-tab.html
@@ -1,7 +1,7 @@
 <div class="container mt-4" id="change-password">
   <div class="row">
     <div class="col-lg-10">
-      <h4 class="text-left mb-4">Schimbă parolă</h4>
+      <h4 class="text-left mb-4">Schimbă parola</h4>
       <form method="POST" action="" style="border: 1px solid #ccc; padding: 20px; border-radius: 5px;">
         {{ form.hidden_tag() }}
         <div class="form-group">
