--- a/app/application/blueprints/site/views/profile-tabs/personal-info-tab.html
+++ b/app/application/blueprints/site/views/profile-tabs/personal-info-tab.html
@@ -6,15 +6,15 @@
           {{ form.hidden_tag() }}
           <div class="form-group">
             <label for="{{ form.firstname.id }}">Nume</label>
-            {{ form.firstname(class="form-control") }}
+            {{ form.firstname(class="form-control", value = current_user.firstname) }}
           </div>
           <div class="form-group">
             <label for="{{ form.secondname.id }}">Prenume</label>
-            {{ form.secondname(class="form-control") }}
+            {{ form.secondname(class="form-control", value = current_user.secondname) }}
           </div>
           <div class="form-group">
             <label for="{{ form.phone.id }}">Număr de telefon</label>
-            {{ form.phone(class="form-control") }}
+            {{ form.phone(class="form-control", value = current_user.phone) }}
           </div>
           <div class="text-left">
             {{ form.submit(class="btn btn-primary") }}
